# Chocboarder

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
lib/GLAD/: CMakeLists.txt
lib/GLAD/include/KHR/: khrplatform.h
lib/GLAD/include/glad/: glad.h
lib/GLAD/src/: glad.c
lib/GLFW/: CMakeLists.txt
lib/GLFW/CMake/modules/: FindEpollShim.cmake  FindXKBCommon.cmake
lib/GLFW/include/GLFW/: glfw3.h  glfw3native.h
lib/GLFW/src/: linux_joystick.c
src/: CMakeLists.txt  cApp.cpp  cApp.h  cMain.cpp  cMain.h
src/GUI/: App.cpp  Canvas.cpp  WindowMain.cpp
src/GUI/headers/: App.h  Canvas.h  WindowMain.h
src/Graphics/: Canvas.cpp  Frame.cpp  Image.cpp  RasterImg.cpp  Sequence.cpp  Tools.cpp
src/Graphics/headers/: Canvas.h  Frame.h  Image.h  RasterImg.h  Sequence.h  Tools.h
src/Window/: App.cpp  Functions.cpp  WindowMain.cpp  cApp.cpp  cMain.cpp
src/Window/headers/: App.h  WindowMain.h  cApp.h  cMain.h
src/glob/: values.hpp
src/misc/: values.hpp
